# docs/swagger.json
@@ -43,6 +43,38 @@
                 }
             }
         },
+        "/auth/confirm-email": {
+            "post": {
+                "description": "Sends email to confirm new account",
+                "tags": [
+                    "ConfirmEmail"
+                ],
+                "summary": "User Confirm Email",
+                "operationId": "confirm-email",
+                "parameters": [
+                    {
+                        "description": "User Email information",
+                        "name": "passwordForm",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.SendEmailForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/exception.ApplicationException"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/forget-password": {
             "post": {
                 "description": "Sends email redefinition when user forgets password",
@@ -58,7 +90,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.ForgetPasswordForm"
+                            "$ref": "#/definitions/model.SendEmailForm"
                         }
                     }
                 ],
@@ -250,17 +282,6 @@
                 }
             }
         },
-        "model.ForgetPasswordForm": {
-            "type": "object",
-            "required": [
-                "email"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                }
-            }
-        },
         "model.JWTToken": {
             "type": "object",
             "required": [
@@ -287,6 +308,17 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.SendEmailForm": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
                     "type": "string"
                 }
             }
